# file_xfer

./: .gitmodules  CMakeLists.txt  README.md  client.cpp  server.cpp
doc/: client.puml  mkuml  server.puml
libs/: externals.txt
libs/utils/: dirutils.cpp  dirutils.h
src/: file_xfer.cpp  file_xfer.h  file_xfer_client.cpp  file_xfer_client.h  file_xfer_server.cpp  file_xfer_server.h
src/fsclient/: fsclient.h  fsclient_windows.cpp
src/utils/: dirutils.cpp  dirutils.h  dirutils_linux.cpp  dirutils_windows.cpp  stdutils.c  stdutils.h
